--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,21 +1,28 @@
-<header class="site-header" role="banner">
+<header class="site-header navbar navbar-default" role="banner">
 
-  <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title | escape }}</a>
-
+  <div class="container-fluid">
+    
     <nav class="site-nav">
-
-      <ul class="nav">
-        {% for page in site.pages %}
-        {% if page.title %}
-        <li><a href="{{page.url}}">{{page.title}}</a></li>
-        {% endif %}
-        {% endfor %}
-        <li><a href="/destinations/">Destinations</a></li>
-        <li><a href="/projects/">Projects</a></li>
-      </ul>
-
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand site-title" href="{{ site.baseurl }}/">{{ site.title | escape }}</a>
+      </div>
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav">
+          {% for page in site.pages %}
+          {% if page.title %}
+          <li><a href="{{page.url}}">{{page.title}}</a></li>
+          {% endif %}
+          {% endfor %}
+          <li><a href="/destinations/">Destinations</a></li>
+          <li><a href="/projects/">Projects</a></li>
+        </ul>
+      </div>
     </nav>
 
   </div>
