--- a/_layouts/country_page.html
+++ b/_layouts/country_page.html
@@ -18,6 +18,7 @@ layout: default
 
 			<div class="col-md-12 md-content">
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+					<img class="flag" src="{{ site.url }}/assets/images/{{ page.destination }}.png">
 					{{ content }}
 				</div>
 			</div>
