--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="col-md-6 credit">
-        <p>{{ site.description | escape }}</p>
+        <p>{{ site.foot-description | escape }}</p>
       </div>
     </div>
   </div>
